2002-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.2.4+cvs

2002-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.4
	* version.c.in: update
	* doc/README: version 0.2.4, release date
	* doc-jp/README: ditto
	* NEWS: update

2002-01-06  Fumitoshi UKAI <ukai@debian.or.jp>

	* [w3m-dev 02781] Re: Bug#127883: w3m tries to use xv as default
	* config.h.dist (DEF_IMAGE_VIEWER): added
	* config.h.dist (DEF_AUDIO_PLAYER): added
	* configure (def_image_viewer): added
	* configure (def_audio_player): added
	* configure (DEF_IMAGE_VIEWER): added
	* configure (DEF_AUDIO_PLAYER): added
	* mailcap.c (DefaultMailcap): use DEF_IMAGE_VIEWER, DEF_AUDIO_PLAYER

2002-01-05  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02779] `;' is valid in URL
	* main.c (chkURLBuffer): add ; 

2001-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02772]
	* istream.c (ssl_get_certificate): show certificate subject and issuer
	* istream.c (ssl_check_cert_ident): add missing NULL for Strcat_m_charp
	* url.c (openSSLHandle): close(sock) and SSL_free(handle) on failure

2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02770] form element outside <form>..</form>
	* main.c (_followForm): check whether parent action is "none"
	* form.c (internal_action): add "none"
	* form.c (do_internal): check internal_action[i].rout
	* file.c (process_input): check cur_form_id
	* file.c (process_select): ditto
	* file.c (process_textarea): ditto
	
2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02769] <form>..</form> as block element
	* file.c (HTMLtagproc1): CLOSE_P for <form>...</form>
	* table.c (feed_table_tag): add feed_table_block_tag for <form></form>

2001-12-28  Hironori Sakamoto <h-saka@lsi.nec.co.jp>

	* [w3m-dev 02765] backend
	* backend.c (internal_get): cleanups
	* file.c (flushline): remove w3m_backend checks
	* file.c (loadHTMLstream): add w3m_backend check
	* fm.h (backend_halfdump_str): deleted