@@ -1,3 +1,9 @@
+2002-01-08  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02794]
+	* url.c (parseURL): cleanup
+	* url.c (parseURL2): file_unquote(pu->file)
+
 2002-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* version.c.in: 0.2.4+cvs
@@ -1783,4 +1789,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.200 2002/01/07 14:00:17 ukai Exp $
+$Id: ChangeLog,v 1.201 2002/01/07 16:28:17 ukai Exp $
